Fix missing line breaks in apartments description

--- a/apartmentsGatsby/src/styles/apartments.module.css
+++ b/apartmentsGatsby/src/styles/apartments.module.css
@@ -51,4 +51,5 @@ ul {
 .description {
   margin: 5% auto;
   text-align: justify;
+  font-size: 10px;
 }
